# english-tutor

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
deploy/: bootstrap.sh  english-tutor-bot.service
docs/: DEPLOY.md  HERMES.md
docs/superpowers/specs/: 2026-06-22-evening-worksheet-design.md  2026-06-22-pdf-parsing-design.md
hermes/: SOUL.md
soul/: SOUL.md
src/tutor/: __init__.py  __main__.py  app.py  config.py  factory.py  pipeline.py  render.py
src/tutor/adapters/: __init__.py
src/tutor/bot/: __init__.py  conversation.py  handlers.py  keyboards.py  main.py  quiz.py  speaking.py  writing.py
src/tutor/db/: __init__.py  connection.py  repository.py  schema.sql
src/tutor/domain/: __init__.py  enums.py  models.py
src/tutor/eval/: __init__.py  anki_cards.py  essay.py  flashcards.py  grader.py  quiz_builder.py  schemas.py  speaking.py  transcript.py  vocab.py
tests/: conftest.py  eval_prompts.py  eval_quiz_quality.py  test_anki.py  test_config.py  test_conversation.py  test_essay.py  test_finalize.py  test_flashcards.py  test_help.py  test_hermes.py  test_keyboards.py  test_memory.py  test_offline_loop.py  test_pdf_parser.py  test_quiz_grader.py  test_quiz_interactive.py  test_render.py  test_repository.py  test_rss.py  test_scheduler.py  test_scraper_normalize.py  test_speaking.py  test_state_machine.py  test_stt_cloud.py  test_telegram_notifier.py  test_transcript.py  test_tts_groq.py  test_vocab.py  test_worksheet.py  test_writing.py
tests/fixtures/: new_scientist_pages_1_10.json  new_scientist_pages_1_5.json  time_pages_1_10.json  time_pages_1_5.json
(+40 files in other folders)
